--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "**/*.blg": true,
         "**/*.fdb_latexmk": true,
         "**/*.fls": true,
-        "**/*.synctex.gz": true
+        "**/*.synctex.gz": true,
+        "**/*.out": true
     }
 }
