--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,7 @@ jobs:
         uses: xu-cheng/latex-action@master
         with:
           root_file: index.tex
+          extra_packages: ccicons
       - uses: actions/upload-artifact@master
         with:
           name: PDF
