--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -69,5 +69,8 @@
             "env": {}
         }
     ],
-    "dimmer.enabled": true
+    "dimmer.enabled": true,
+    "cSpell.words": [
+        "combinators"
+    ]
 }
