--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,12 +7,21 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
-      - name: Build template
+      - name: Build Paper
         uses: swissmanu/latex-action@master
         with:
-          root_file: index.tex
+          root_file: paper.tex
+          args: -pdf -file-line-error -interaction=nonstopmode -shell-escape # allows minted to do its work
+      - name: Build Slides
+        uses: swissmanu/latex-action@master
+        with:
+          root_file: slides.tex
           args: -pdf -file-line-error -interaction=nonstopmode -shell-escape # allows minted to do its work
       - uses: actions/upload-artifact@master
         with:
-          name: PDF
-          path: index.pdf
+          name: Paper
+          path: paper.pdf
+      - uses: actions/upload-artifact@master
+        with:
+          name: Slides
+          path: slides.pdf
