--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "latex-workshop.docker.enabled": true,
-    "latex-workshop.docker.image.latex": "swissmanu/latex",
+    "latex-workshop.docker.image.latex": "swissmanu/latex:latest",
     "editor.wordWrap": "wordWrapColumn",
     "files.exclude": {
         "**/*.aux": true,
@@ -64,7 +64,7 @@
             "name": "bibtex",
             "command": "bibtex",
             "args": [
-                "%DOCFILE%"
+                "bibliography"
             ],
             "env": {}
         }
